CIV-12612 put bundle and others in correct collections